<resources>
    <string name="app_name">aios-crm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_log_in">Login</string>
    <string name="lbl_forgot_your_password">Forgot your password?</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_default_language">Default Language</string>
    <string name="lbl_or">or</string>
    <string name="error_enter_email_password">Please enter email and password</string>
    <string name="error_enter_email">Please enter email</string>
    <string name="error_enter_password">Please enter password</string>
    <string name="lbl_welcome_to_aios_crm">Welcome to AIOS CRM</string>
    <string name="lbl_ok">Ok</string>
    <string name="internal_server_error_500">Oops!! There is some problem with request. Please try again</string>
    <string name="logout_401">You are not authorised to login or Your account is inactive.</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="dialog_permission_title">Permission required</string>
    <string name="dialog_permission_default_message">Permission required for continue app</string>
    <string name="dialog_permission_button_positive">OK</string>
    <string name="post_notification">Permission Require for push notification</string>
    <string name="permission_location">Permission Require for find location</string>
    <string name="calling">Permission Require for calling</string>
    <string name="company">Company: %s</string>
    <string name="default_notification_channel_id">aios_crm_default_notification</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_enter_status">Please Select Status</string>
    <string name="lbl_source">Please Select Source</string>
    <string name="lbl_assigned">Assign a staff</string>
    <string name="lbl_assine">Assigned</string>
    <string name="lbl_position">Position</string>
    <string name="lbl_website">Website</string>
    <string name="lbl_tags">Tags</string>
    <string name="lbl_Created">Created</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_phone">PhoneNumber</string>
    <string name="lbl_lead_value">Lead Value</string>
    <string name="lbl_last_contact">Last Contact</string>
    <string name="lbl_company">Company Name</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_city">City</string>
    <string name="lbl_state">State</string>
    <string name="lbl_status">Status</string>
    <string name="lbl_zip_code">Zip Code</string>
    <string name="lbl_description">Please enter description</string>
    <string name="lbl_country">Please select Country</string>
    <string name="lbl_contacted_today">Contacted Today</string>
    <string name="lbl_public">Public</string>
    <string name="lbl_is_public">Is Public</string>
    <string name="lbl_custom_fields">Custom Fields</string>
    <string name="lbl_set_date">Select Date</string>
    <string name="lbl_select_priority" translatable="false">Please Select Priority</string>
    <string name="lbl_select_subject" translatable="false">Please Enter Subject</string>
    <string name="lbl_hourly_rate" translatable="false">Hourly Rate</string>
    <string name="lbl_due_date" translatable="false">Due Date</string>
    <string name="lbl_start_date" translatable="false">Start Date</string>
    <string name="lbl_repeat_every" translatable="false">Repeat Every</string>
    <string name="lbl_total_cycles" translatable="false">Total Cycles(0) for infinite</string>
    <string name="lbl_related_to_type" translatable="false">Related To</string>
    <string name="lbl_search" translatable="false">Search</string>
    <string name="lbl_billable" translatable="false">Billable</string>
    <string name="lbl_count" translatable="false">Enter Count</string>
    <string name="lbl_source_">Source</string>

    <string name="error_enter_status">Please enter status</string>
    <string name="error_enter_source">Please enter source</string>
    <string name="error_enter_staff">Please enter staff</string>
    <string name="error_enter_name">Please enter name</string>
    <string name="error_enter_pos">Please enter position</string>
    <string name="error_enter_web">Please enter website</string>
    <string name="error_enter_number">Please enter phone Number</string>
    <string name="error_enter_leadvalue">Please enter lead Value</string>
    <string name="error_enter_companyName">Please enter company name</string>
    <string name="error_enter_address">Please enter address</string>
    <string name="error_enter_city">Please enter city</string>
    <string name="error_enter_state">Please enter state</string>
    <string name="error_enter_country">Please enter country</string>
    <string name="error_enter_zipcode">Please enter zip code</string>
    <string name="error_enter_desc">Please enter description</string>

    <string name="error_enter_priority">Please enter priority</string>
    <string name="error_enter_sub">Please enter subject</string>
    <string name="error_enter_hourlyRate">Please enter hourly rate</string>
    <string name="error_enter_startDate">Please enter start date</string>
    <string name="error_enter_dueDate">Please enter due date</string>
    <string name="error_enter_related">Please enter related</string>
    <string name="error_enter_repeat">Please enter repeat</string>
    <string name="error_enter_search">Please enter search</string>
    <string name="error_enter_total">Please enter total</string>
    <string name="lbl_save">Save</string>

    <string name="lbl_email_notify" translatable="false">Email Notification</string>
    <string name="lbl_sms" translatable="false">SMS Notification</string>
    <string name="lbl_related" translatable="false">Related</string>
    <string name="lbl_date_time" translatable="false">Date Time</string>
    <string name="lbl_attendance" translatable="false">Attendance</string>
    <string name="lbl_appointment" translatable="false">Appointment Type</string>
    <string name="lbl_location" translatable="false">Appointment Location ( optional )</string>
    <string name="lbl_note">Please mark the checkboxs as checked if you "n" want selected attendes and contact to recieve "\n" reminders eg. if set 30 minutes before the "\n" appointment start. Note that this feature "\n" requires cron job to be configured</string>

    <string name="error_enter_save">saved</string>
    <string name="add_task">Add Task</string>
    <string name="add_lead">Add Lead</string>
    <string name="add_appointment">Add Appointment</string>

    <string name="error_enter_appointment">Please enter Appointment</string>
    <string name="error_enter_attendance">Please enter Attendance</string>
    <string name="error_enter_dateTime">Please enter Date and Time</string>
    <string name="error_enter_attendance_type">Please enter attendance type</string>


    <string name="lbl_leads_info">Leads Info</string>
    <string name="lbl_"></string>
    <string name="general_information">General Information</string>


</resources>