<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

      <variable
          name="viewModel"
          type="com.softwareallin1.aioscrm.ui.appointly.viewmodel.AddAppointmentViewModel"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorF8F5F6"
        tools:context=".ui.appointly.ui.AddAppointmentFragment">

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineStart"
            app:layout_constraintGuide_begin="@dimen/_8sdp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineEnd"
            app:layout_constraintGuide_end="@dimen/_8sdp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/btnAddAppointment"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:fillViewport="true"
            app:layout_constraintStart_toStartOf="@id/guidelineStart">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/colorF8F5F6">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tlSubject"
                    style="@style/TextInputLayoutStyle"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:hint="@string/lbl_select_subject"
                    app:hintEnabled="true"
                    app:startIconDrawable="@drawable/ic_file_copy_24"
                    app:counterEnabled="true"
                    app:counterMaxLength="30"
                    app:endIconMode="clear_text"
                    app:startIconTint="@color/color6E394A">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etSubject"
                        android:text="@={viewModel.subject}"
                        android:maxLength="30"
                        style="@style/TextInputEditText.regular.11.color444444"
                        android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tlDesc"
                    android:hint="@string/lbl_description"
                    app:counterMaxLength="200"
                    app:counterEnabled="true"
                    style="@style/TextInputLayoutStyle"
                    app:hintEnabled="true"
                    app:endIconMode="clear_text"
                    app:startIconTint="@color/color6E394A"
                    app:startIconContentDescription="@string/lbl_description"
                    app:startIconDrawable="@drawable/ic_file_copy_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etDesc"
                        android:maxLength="200"
                        android:text="@={viewModel.desc}"
                        style="@style/TextInputEditText.regular.11.color444444"
                        android:inputType="textMultiLine" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tlRelated"
                    style="@style/TextInputLayoutStyle"
                    android:hint="@string/lbl_related"
                    app:hintEnabled="true"
                    app:startIconDrawable="@drawable/ic_time_24"
                    app:startIconTint="@color/color6E394A"
                    app:endIconMode="clear_text"
                    app:counterEnabled="true"
                    app:counterMaxLength="50">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etPos"
                        android:text="@={viewModel.related}"
                        android:maxLength="50"
                        style="@style/TextInputEditText.regular.11.color444444"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tlDateTime"
                    android:hint="@string/lbl_date_time"
                    app:counterMaxLength="30"
                    app:counterEnabled="true"
                    style="@style/TextInputLayoutStyle"
                    app:hintEnabled="true"
                    app:endIconMode="clear_text"
                    app:startIconTint="@color/color6E394A"
                    app:startIconContentDescription="@string/lbl_date_time"
                    app:startIconDrawable="@drawable/ic_time_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etDateTime"
                        android:maxLength="30"
                        android:text="@={viewModel.dateTime}"
                        style="@style/TextInputEditText.regular.11.color444444"
                        android:inputType="textMultiLine" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tlLoction"
                    style="@style/TextInputLayoutStyle"
                    android:hint="@string/lbl_location"
                    app:hintEnabled="true"
                    app:startIconDrawable="@drawable/ic_location_24"
                    app:counterEnabled="true"
                    app:counterMaxLength="100"
                    app:endIconMode="clear_text"
                    app:startIconTint="@color/color6E394A">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etLocation"
                        android:text="@={viewModel.location}"
                        android:maxLength="100"
                        style="@style/TextInputEditText.regular.11.color444444"
                        android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="true"
                    android:hint="@string/lbl_attendance"
                    app:startIconDrawable="@drawable/ic_assigned"
                    app:startIconTint="@color/color6E394A"
                    style="@style/TextInputLayoutStyleWithDropDown">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/actAttendace"
                        android:text="@={viewModel.attendance}"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/color444444" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyleWithDropDown"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_appointment"
                    app:hintEnabled="true"
                    app:startIconDrawable="@drawable/ic_date"
                    app:startIconTint="@color/color6E394A">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/actAppointment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp"
                        android:text="@={viewModel.appointment}"
                        android:inputType="none"
                        android:textColor="@color/color444444" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyleWithDropDown"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_repeat_every"
                    app:hintEnabled="true"
                    app:startIconDrawable="@drawable/ic_time_24"
                    app:startIconTint="@color/color6E394A">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/actRepeat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp"
                        android:text="@={viewModel.repeat}"
                        android:inputType="none"
                        android:textColor="@color/color444444" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/cbSms"
                    android:checked="@={viewModel.sms}"
                    android:text="@string/lbl_sms"
                    app:buttonTint="@color/color6DC99B" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/cbEmail"
                    android:checked="@={viewModel.email}"
                    android:text="@string/lbl_email_notify"
                    app:buttonTint="@color/color6DC99B" />

            </androidx.appcompat.widget.LinearLayoutCompat>
            

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_appointment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@id/guidelineStart"
            android:id="@+id/btnAddAppointment"
            style="@style/Button.bold.12.colorWhite"
            android:layout_marginBottom="@dimen/_8sdp"
            android:onClick="@{()-> viewModel.validationAppointmentForm()}"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>